# heartfm-evals

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  agents.md  batch_vit_pretrain_hydra_run_1node.sh  pyproject.toml
.github/prompts/: # Plan: Modular Segmentation Pipeline wi.prompt 2.md  # Plan: Modular Segmentation Pipeline wi.prompt.md  plan-cmrFoundationModelBenchmark.prompt.md  plan-modularSegmentationPipeline.prompt.md
models/dinov3/: hubconf.py
notebooks/: acdc_cinema_dense_segmentation.ipynb  acdc_cinema_unetr_segmentation.ipynb  acdc_classification.ipynb  acdc_dense_segmentation.ipynb  acdc_dino_dense_decoder_segmentation.ipynb  acdc_dino_unetr_segmentation.ipynb  acdc_linear_classification.ipynb  acdc_sam_unetr_segmentation.ipynb  acdc_segmentation.ipynb  acdc_segmentation_plan.md  foreground_segmentation.ipynb  hf_dino.ipynb  segmenter_head.ipynb
notebooks/classification/: README.md  acdc_classification.ipynb  plot_classification_results.ipynb
notebooks/segmentation/: acdc_cinema_conv_decoder_segmentation.ipynb  acdc_cinema_dense_linear_probe_segmentation.ipynb  acdc_cinema_dense_segmentation.ipynb  acdc_cinema_unetr_segmentation.ipynb  acdc_dense_segmentation.ipynb  acdc_dino_dense_decoder_segmentation.ipynb  acdc_dino_dense_linear_probe_segmentation.ipynb  acdc_dino_unetr_segmentation.ipynb  acdc_sam_conv_decoder_segmentation.ipynb  acdc_sam_dense_segmentation.ipynb  acdc_sam_unetr_segmentation.ipynb  acdc_segmentation.ipynb  foreground_segmentation.ipynb  segmenter_head.ipynb
prompts/: restructuring_plan.md  sam2_decisions.md
results/classification/: bootstrap_ci.csv  bootstrap_ci_pairwise.csv  cinema_logreg.json  cinema_logreg.md  cinema_pretrained_ftfull_cls.json  cinema_pretrained_ftfull_gap.json  cinema_pretrained_logreg_cls.json  dinov3_logreg.md  dinov3_vit7b16_ftfrozen_cls.json  dinov3_vit7b16_ftfrozen_gap.json  dinov3_vit7b16_logreg_gap.json  dinov3_vitb16_ftfrozen_cls.json  dinov3_vitb16_ftfrozen_gap.json  dinov3_vitb16_ftfull_cls.json  dinov3_vitb16_ftfull_gap.json  dinov3_vitb16_logreg_cls.json  dinov3_vitb16_logreg_gap.json  dinov3_vitl16_ftfrozen_cls.json  dinov3_vitl16_ftfrozen_gap.json  dinov3_vitl16_logreg_cls.json  dinov3_vitl16_logreg_gap.json  dinov3_vits16_ftfrozen_cls.json  dinov3_vits16_ftfrozen_gap.json  dinov3_vits16_ftfull_cls.json  dinov3_vits16_ftfull_gap.json  dinov3_vits16_logreg_gap.json  sam_logreg.md  sam_vit_base_ftfrozen_gap.json  sam_vit_base_ftfull_gap.json  sam_vit_base_logreg_gap.json  sam_vit_huge_logreg_gap.json  sam_vit_large_ftfrozen_gap.json  sam_vit_large_logreg_gap.json  summary.csv  summary.md
results/segmentation/: results.csv
results/segmentation_old/: results.csv
scripts/: acdc_cinema_dense_segmentation.py  acdc_dense_segmentation.py  acdc_dino_dense_decoder_segmentation.py  acdc_dino_dense_segmentation.py  acdc_sam2_dense_segmentation.py  acdc_sam_dense_segmentation.py  acdc_segmentation.py  compare_classification_results.py  foreground_segmentation.py  hf_dino.py  install.sh  parse_results.py  results.csv  run_acdc_classification.py  run_sam2_variants.sh  run_sam3.sh  segmenter_head.py  submit_classification_sam2.sh  submit_smoke_tests.sh
scripts/classification/: README.md  _common.py  batch_run_all_classification.sh  batch_run_cinema_finetune_classification.sh  batch_run_cinema_logreg_classification.sh  batch_run_dino_finetune_classification.sh  bootstrap_ci.py  (+13 more)
tests/: test_classification_multi_dataset.py  test_segmentation_metrics.py
(+736 files in other folders)
