[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "heartfm-evals"
version = "0.1.0"
authors = [
  { name = "Levan Bokeria", email = "lbokeria@turing.ac.uk" },
  { name = "Camila Rangel-Smith", email = "crangelsmith@turing.ac.uk" }
]
description = "A modular package for evaluating foundation model performance on various clinical tasks involving cardiac MRI and CT images."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pandas",
    "tqdm",
    "nibabel",
    "SimpleITK",
    "monai",
    "Pyyaml",
    "matplotlib",
    "hydra-core",
    "omegaconf",
    "safetensors",
    "timm",
    "einops",
    "CineMA @ git+https://github.com/alan-turing-institute/CineMA",
    "tensorboard",
    "wandb",
    "dinov3 @ git+https://github.com/facebookresearch/dinov3/",
    "ipykernel"
]

[project.optional-dependencies]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
  "pre-commit",
  "black",
]

[project.urls]
Homepage = "https://github.com/alan-turing-institute/heartfm-evals"
"Bug Tracker" = "https://github.com/alan-turing-institute/heartfm-evals/issues"
Discussions = "https://github.com/alan-turing-institute/heartfm-evals/discussions"
Changelog = "https://github.com/alan-turing-institute/heartfm-evals/releases"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["heartfm_evals"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]



[tool.ruff]
src = ["src"]
exclude = []
line-length = 88  # how long you want lines to be

[tool.ruff.format]
docstring-code-format = true  # code snippets in docstrings will be formatted

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
]
ignore = [
  "PLR",    # Design related pylint codes
  "ISC001", # Conflicts with formatter
]
unfixable = [
  "F401",   # Would remove unused imports
  "F841",   # Would remove unused variables
]
flake8-unused-arguments.ignore-variadic-names = true  # allow unused *args/**kwargs

[tool.hatch.metadata]
allow-direct-references = true